2005-03-24  Brian Wellington <bwelling@xbill.org>
	* client/gtk/connect.c: Remove static buffers.

2005-03-23  Brian Wellington <bwelling@xbill.org>
	* client/ai/greedy.c: Add gold support to the AI.
	* server/player.c: The patch to enable random seating ordered
	caused gtk assertions when connecting to a full game.
	* Makefile.am, configure.ac, client/ai/Makefile.am, ai/: Remove
	the old AI; enable the new AI.

2005-03-23  0.9.1  Roland Clobus <rclobus@bigfoot.com>
	* New version numbering: only 3 digits. The first two match the
	protocol version, and the third is the build number.
	* client/gtk/frontend.h, client/gtk/offline.c, client/gtk/theme.h:
	Moved declaration of init_themes to theme.h
	* server/player.c: Version check to only two digits. Added message
	when version does not match.
	* client/common/client.c, common/game.c, common/game.h, common/map.c,
	common/map.h, server/pregame.c: Small protocol change, to avoid
	sending unused data. Added option to send secrets of the map.
	* client/ai/ai.c: Code cleanup to random_name. Randomizer needs to be
	initialized only once.
	* po/POTFILES.in: Added client/ai/ai.c
	* client/gtk/connect.c: Made metaserver redirects insensitive to
	buffer overflows.

2005-03-23  Bas Wijnen <shevek@fmf.nl>
	* client/common/client.c, server/gold.c, server/pregame.c: Fixed race
	condition for client after rolling dice.

2005-03-22  Brian Wellington <bwelling@xbill.org>
	* meta-server/gnocatan-meta-server.c: Removed compiler warnings when
	compiling with -pedantic.

2005-03-20  0.8.1.59  Roland Clobus <rclobus@bigfoot.com>
	* common/game.c: The automatic indent did break the sending of
	gameinfo.

2005-03-20  0.8.1.58  Roland Clobus <rclobus@bigfoot.com>
	* ALL: Applied 'make indent'
	
2005-03-20  0.8.1.57  Roland Clobus <rclobus@bigfoot.com>
	* server/gnocatan-server.c: Made random seating order the default.
	* server/gtk/gnocatan-server-gtk.c: Made random order setting
	persistent.
	* Makefile.am: Added 'make indent' target.
